--- a/src/components/css/Footer.scss
+++ b/src/components/css/Footer.scss
@@ -2,19 +2,38 @@
 
 .footer {
   background: $text-primary;
-  color: $background-white;
-  padding: $spacing-md 0;
+  color: white;
+  padding: $mobile-spacing-lg 0;
   margin-top: auto;
+
+  @include tablet-up {
+    padding: $spacing-xl 0;
+  }
 
   .container {
     max-width: 1280px;
     margin: 0 auto;
-    padding: 0 1rem;
+    padding: 0 $mobile-spacing-md;
+    text-align: center;
 
-    .copyright {
-      text-align: center;
-      font-size: 0.875rem;
-      opacity: 0.8;
+    @include tablet-up {
+      padding: 0 $spacing-lg;
+    }
+
+    p {
+      font-size: $mobile-font-size-sm;
+      color: rgba(255, 255, 255, 0.8);
+      margin: 0;
+      line-height: 1.5;
+
+      @include tablet-up {
+        font-size: $font-size-base;
+      }
+
+      .highlight {
+        color: $primary-color;
+        font-weight: 600;
+      }
     }
   }
 } 
